--- a/.github/workflows/ci -dev.yml
+++ b/.github/workflows/ci -dev.yml
@@ -8,3 +8,4 @@ jobs:
         uses: Thippareddykishor/github-actions-resuable/.github/workflows/ci-dev.yml@main
         with: 
             component_name: frontend 
+            app_type: nginx
