--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,24 @@
 server {
-    listen       80;
-    server_name  localhost;
+        listen       80;
+        listen       [::]:80;
+        server_name  localhost;
+        root         /usr/share/nginx/html;
 
+        include /etc/nginx/default.d/*.conf;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+        error_page 404 /404.html;
+        location = /404.html {
+        }
 
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+        }
 
-    
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-
+        location /images/ {
+          expires 5s;
+          root   /usr/share/nginx/html;
+          try_files $uri /images/placeholder.jpg;
+        }
         location /api/catalogue/ { proxy_pass http://catalogue:8080/; }
         location /api/user/ { proxy_pass http://user:8080/; }
         location /api/cart/ { proxy_pass http://cart:8080/; }
@@ -26,4 +30,5 @@ server {
           access_log off;
         }
 
+    }
 }
