--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,31 @@
-server {
-        listen       80;
-        listen       [::]:80;
-        server_name  localhost;
-        root         /usr/share/nginx/html;
+user  nginx;
+worker_processes  auto;
 
-        include /etc/nginx/default.d/*.conf;
+error_log  /var/log/nginx/error.log notice;
+pid        /var/cache/nginx/nginx.pid;
 
-        error_page 404 /404.html;
-        location = /404.html {
-        }
 
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-        }
+events {
+    worker_connections  1024;
+}
 
-        location /images/ {
-          expires 5s;
-          root   /usr/share/nginx/html;
-          try_files $uri /images/placeholder.jpg;
-        }
-        location /api/catalogue/ { proxy_pass http://catalogue:8080/; }
-        location /api/user/ { proxy_pass http://user:8080/; }
-        location /api/cart/ { proxy_pass http://cart:8080/; }
-        location /api/shipping/ { proxy_pass http://shipping:8080/; }
-        location /api/payment/ { proxy_pass http://payment:8080/; }
-        location /api/ratings/ { return 200 'OK'; }
-        location /health {
-          stub_status on;
-          access_log off;
-        }
 
-    }
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for" $request_time';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
+}
